[tool.poetry]
name = "scrape"
version = "0.1.0"
description = ""
authors = ["Brian Sunter <2816289+briansunter@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
run-main = "scrape.main:main"
transcript= "scrape.main:main2"
pdf = "scrape.main:main3"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.1"
anthropic = "^0.26.0"
openai = "^1.30.1"
fpdf = "^1.7.2"
markdown = "^3.6"
pypdf2 = "^3.0.1"
fpdf2 = "^2.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
